# microReticulum

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  library.json  library.properties  platformio.ini
.github/: FUNDING.yml
.github/workflows/: cmake-single-platform.yml
boards/: lilygo_t_echo.json  rak11200.json  rak4630.json
docs/: provisioning_client_guide.md  provisioning_integration_guide.md
examples/: CMakeLists.txt  README.md  main.cpp
examples/common/: UDPInterface.cpp  UniversalFileSystem.cpp  library.properties
examples/common/lora_interface/: LoRaCSMA.cpp  LoRaCSMA.h  LoRaInterface.cpp  LoRaInterface.h  library.properties
examples/common/tcp_interface/: TCPInterface.cpp  TCPInterface.h  library.properties
examples/common/udp_interface/: UDPInterface.cpp  UDPInterface.h  library.properties
examples/common/universal_filesystem/: UniversalFileSystem.cpp  UniversalFileSystem.h  library.properties
examples/encrypted_announce/: README.md
examples/encrypted_announce/src/: main.cpp
examples/identity_vault/: README.md  identity_tool.py  platformio.ini
examples/identity_vault/src/: main.cpp
examples/identity_vault/test/msgs/: last.enc
examples/link/: main.cpp  platformio.ini
examples/link_native/: main.cpp  platformio.ini
examples/link_native/src/: main.cpp
examples/lora/: LoRaInterface.cpp  main.cpp
examples/lora_announce/: FileSystem.h  LoRaInterface.cpp  LoRaInterface.h  main.cpp  platformio.ini
examples/lora_announce/boards/: heltec-wireless-tracker-v2.json  rak11300.json
examples/lora_announce/src/: main.cpp
examples/lora_announce/variants/rak11200/: pins_arduino.h
examples/lora_announce/variants/rak11300/: rak_variant.h
examples/lora_transport/: .gitignore  main.cpp  platformio.ini
examples/lora_transport/boards/: t-beams3-supreme.json
examples/lora_transport/src/: main.cpp
examples/lora_transport/variants/rak11300/: variant.h
examples/lora_transport/variants/rak4630/: variant.cpp
examples/nomadnet/: platformio.ini
examples/nomadnet/src/: main.cpp
examples/tcp_announce/: main.cpp  platformio.ini
examples/test/: FileSystem.cpp  Filesystem.cpp  Filesystem.h  Test.cpp  Test.h  TestBytes.cpp  TestCollections.cpp  TestCrypto.cpp  TestFilesystem.cpp  TestFilesystem.h  TestOS.cpp  TestPersistence.cpp  TestReference.cpp  TestReticulum.cpp  main.cpp  platformio.ini  test_destination_table  test_map  test_object
examples/udp/: UDPInterface.cpp  UDPInterface.h  main.cpp
examples/udp_announce/: UDPInterface.cpp  UDPInterface.h  main.cpp  platformio.ini
examples/udp_announce/src/: main.cpp
examples/udp_transport/: main.cpp  platformio.ini
examples/udp_transport/src/: main.cpp
examples/unit_tests/: A.cpp  A.h  AData.h  AImpl.cpp  AImpl.h  B.cpp  B.h  FileSystem.cpp  Test.cpp  Test.h  TestBytes.cpp  TestCrypto.cpp  TestOS.cpp  TestObjects.cpp  TestPersistence.cpp  TestReference.cpp  TestReticulum.cpp  main.cpp  platformio.ini  test_array_2  test_array_python  test_destination_table  test_object  test_vector  transport_identity
lib/encrypted_store/: README.md  encrypted_store.cpp  encrypted_store.h  library.json
lib/password/: README.md  library.json  password.cpp  password.h
src/: Bytes.cpp  Bytes.h  Channel.cpp  Channel.h  Destination.cpp  Destination.h  DumbBuffer.h  File.h  FileStream.h  FileSystem.h  Filesystem.h  Identity.cpp  Identity.h  Interface.cpp  Interface.h  Link.cpp  Link.h  LinkData.h  Log.cpp  Log.h  None.h  Packet.cpp  Packet.h  Resource.cpp  Resource.h  ResourceData.h  Reticulum.cpp  Reticulum.h  Transport.cpp  Transport.h  Type.h  main.cpp  microReticulum.h
src/Cryptography/: AES.h  CBC.cpp  CBC.h  Ed25519.cpp  Ed25519.h  Fernet.cpp  Fernet.h  HKDF.cpp  HKDF.h  HMAC.h  Hashes.cpp  Hashes.h  PKCS7.h  Random.h  Token.cpp  Token.h  X25519.cpp  X25519.h
src/Interfaces/: Interface.cpp  Interface.h  LoRaInterface.cpp  LoRaInterface.h  UDPInterface.cpp  UDPInterface.h
src/LXMF/: Type.h
src/Persistence/: DestinationEntry.cpp  DestinationEntry.h
test/: CMakeLists.txt  README.md  Test.cpp  test.cpp
test/common/filesystem/: FileSystem.h
test/crc/: Test.cpp
test/test_allocator/: test_allocator.cpp  test_main.cpp
test/test_bytes/: test_bytes.cpp  test_main.cpp
test/test_collections/: test_collections.cpp  test_main.cpp
test/test_crypto/: test_crypto.cpp  test_main.cpp
test/test_example/: test_example.cpp  test_main.cpp
test/test_filesystem/: test_filesystem.cpp  test_main.cpp
test/test_general/: test_general.cpp  test_main.cpp
test/test_generational_set/: test_generational_set.cpp
test/test_ifac/: test_main.cpp
test/test_msgpack/: test_main.cpp  test_msgpack.cpp
test/test_objects/: A.cpp  A.h  B.cpp  B.h  BData.h  BImpl.cpp  BImpl.h  test_main.cpp
test/test_os/: test_main.cpp  test_os.cpp
test/test_persistence/: test_main.cpp  test_persistence.cpp
test/test_provisioning/: test_provisioning.cpp
test/test_reference/: test_main.cpp  test_reference.cpp
test/test_resource_advertisement/: test_resource_advertisement.cpp
test/test_rns_loopback/: test_main.cpp  test_rns_loopback.cpp
test/test_rns_persistence/: test_main.cpp  test_rns_persistence.cpp
test/test_transport/: test_main.cpp  test_transport.cpp
test_interop/: CMakeLists.txt  README.md  encode_advertisement.py  python_link_receiver.py  python_packet_receiver.py  python_request_receiver.py  python_resource_receiver.py  run_all.sh  run_link_lifecycle.sh  run_packet_exchange.sh  run_request_response.sh  run_resource_transfer.sh  transport_identity
test_interop/link_interop_sender/: platformio.ini  transport_identity
test_interop/link_interop_sender/src/: main.cpp
test_interop/packet_interop_sender/: platformio.ini  transport_identity
test_interop/packet_interop_sender/src/: main.cpp
test_interop/request_interop_sender/: platformio.ini  transport_identity
test_interop/request_interop_sender/src/: main.cpp
test_interop/resource_interop_sender/: platformio.ini  transport_identity
test_interop/resource_interop_sender/src/: main.cpp
tools/: size_report.sh
(+107 files in other folders)
